# bookmarks-kiro

./: .env.example  .gitignore  CHAT_LOG.json  FULL_CHAT_LOG.json  README.md  REQUIREMENTS.md  config.py  config.yaml  main.py  pocket-bookmarks.csv  pyproject.toml  requirements.txt  test_bookmarks.csv  test_output_summary.txt
.kiro/steering/: product.md  structure.md  tech.md
src/: __init__.py  ai_processor.py  bookmark_processor.py  content_extractor.py  utils.py
